--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <maven.javadoc.version>2.10.3</maven.javadoc.version>
         <maven.info.report.version>2.8.1</maven.info.report.version>
         <pmd.version>3.6</pmd.version>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
 
     <dependencies>
