--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,9 @@
         <maven.info.report.version>2.8.1</maven.info.report.version>
         <pmd.version>3.6</pmd.version>
         <failOnMissingWebXml>false</failOnMissingWebXml>
+ 
+        <!--  Port used for development. -->
+        <server.port>8686</server.port>
     </properties>
 
     <dependencies>
@@ -231,7 +234,7 @@
                 <version>${tomcat.version}</version>
                 <configuration>
                     <path>${deploymentPath}</path>
-                    <port>8686</port>
+                    <port>${server.port}</port>
                 </configuration>
             </plugin>
             <plugin>
